<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="appbar_scrolling_view_behavior"
    tools:context="com.example.srividhya.filescanner.MainActivity"
    tools:showIn="@layout/activity_main">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="bottom">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="12">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_alignParentLeft="true"
                    android:text="@string/largefiles"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_alignParentRight="true"
                    android:text="@string/extdatafiles"/>

            </RelativeLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal"
                android:weightSum="1">


                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:name="com.example.srividhya.filescanner.DataFileFragment"
                    android:id="@+id/datafilefragment"
                    android:layout_weight="1"
                    tools:layout="@layout/data_file_fragment"
                    />

                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:name="com.example.srividhya.filescanner.ExtDataFragment"
                    android:id="@+id/extDataList"
                    android:layout_weight="1"
                    tools:layout="@layout/data_file_fragment" />
            </LinearLayout>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pausescan"
                android:id="@+id/pausebutton"
                android:weightSum="1"
                android:layout_gravity="center_horizontal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startscan"
                android:id="@+id/startbutton"
                android:layout_gravity="center_horizontal"
                android:weightSum="1"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_share"
                android:id="@+id/sharebutton"
                android:layout_gravity="center_horizontal"
                android:weightSum="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:id="@+id/perc_view"
                android:weightSum="1"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:id="@+id/avg_view"
                android:gravity="center"
                android:weightSum="1"
                />



        </LinearLayout>

    </ScrollView>




</RelativeLayout>